WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152372
Fix the debug region overlays for RTL documents
https://bugs.webkit.org/show_bug.cgi?id=152372
Summary
Fix the debug region overlays for RTL documents
Simon Fraser (smfr)
Reported
2015-12-16 18:26:34 PST
Fix the debug region overlays for RTL documents
Attachments
Patch
(4.62 KB, patch)
2015-12-16 18:38 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(3.92 MB, application/zip)
2015-12-16 19:18 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-yosemite
(860.26 KB, application/zip)
2015-12-16 19:23 PST
,
Build Bot
no flags
Details
Patch
(4.66 KB, patch)
2015-12-16 21:08 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(4.63 KB, patch)
2015-12-16 21:58 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-12-16 18:38:22 PST
Created
attachment 267520
[details]
Patch
Build Bot
Comment 2
2015-12-16 19:18:09 PST
Comment on
attachment 267520
[details]
Patch
Attachment 267520
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/569435
New failing tests: imported/blink/fast/pagination/viewport-x-horizontal-tb-rtl.html fast/regions/selection/position-for-point-vert-rl.html fast/multicol/pagination/RightToLeft-tb.html imported/blink/fast/pagination/viewport-x-horizontal-bt-rtl.html imported/blink/fast/pagination/viewport-x-vertical-rl-rtl.html fast/multicol/vertical-rl/column-break-with-balancing.html fast/regions/selection/position-for-point-1-vert-rl.html fast/writing-mode/Kusa-Makura-background-canvas.html imported/blink/fast/pagination/viewport-x-vertical-rl-ltr.html fast/multicol/pagination/RightToLeft-lr.html fast/multicol/pagination/RightToLeft-bt.html fast/block/positioning/auto/vertical-rl/007.html fast/block/basic/truncation-rtl.html fast/multicol/pagination/RightToLeft-rl.html
Build Bot
Comment 3
2015-12-16 19:18:11 PST
Created
attachment 267524
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 4
2015-12-16 19:23:19 PST
Comment on
attachment 267520
[details]
Patch
Attachment 267520
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/569448
New failing tests: imported/w3c/web-platform-tests/streams-api/readable-streams/garbage-collection.html
Build Bot
Comment 5
2015-12-16 19:23:22 PST
Created
attachment 267525
[details]
Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Simon Fraser (smfr)
Comment 6
2015-12-16 21:08:07 PST
Created
attachment 267528
[details]
Patch
Darin Adler
Comment 7
2015-12-16 21:29:34 PST
Comment on
attachment 267528
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=267528&action=review
> Source/WebCore/page/PageOverlay.cpp:184 > + IntPoint offset = frameView->scrollOrigin();
I think this should be: auto& offset = frameView->scrollOrigin();
> Source/WebCore/page/PageOverlay.cpp:185 > + graphicsContext.translate(toFloatSize(frameView->scrollOrigin()));
should be toFloatSize(offset)
Simon Fraser (smfr)
Comment 8
2015-12-16 21:58:37 PST
Created
attachment 267535
[details]
Patch
WebKit Commit Bot
Comment 9
2015-12-16 22:57:22 PST
Comment on
attachment 267535
[details]
Patch Clearing flags on attachment: 267535 Committed
r194210
: <
http://trac.webkit.org/changeset/194210
>
WebKit Commit Bot
Comment 10
2015-12-16 22:57:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug